[gd_scene load_steps=22 format=3 uid="uid://b2vyxp1qbtv22"]

[ext_resource type="StyleBox" uid="uid://nqey8i51uq6n" path="res://Styles/AppBG.SBF.tres" id="1_cc3py"]
[ext_resource type="Script" path="res://Scripts/Persistent.gd" id="1_p5snc"]
[ext_resource type="Script" path="res://Scripts/UI/AuxTab.gd" id="2_fr1oi"]
[ext_resource type="Script" path="res://Scripts/Log/Log.gd" id="3_ihmcm"]
[ext_resource type="Theme" uid="uid://c8b12qbhg0vxy" path="res://Styles/TextPipeline.tres" id="3_ykh8n"]
[ext_resource type="Script" path="res://Scripts/Pipeline.gd" id="4_d3lki"]
[ext_resource type="Theme" path="res://Styles/AuxPanel.tres" id="4_hwwia"]
[ext_resource type="Script" path="res://Scripts/UI/STextEditor.gd" id="5_beomd"]
[ext_resource type="Script" path="res://Scripts/UI/STree.gd" id="5_ddx1b"]
[ext_resource type="Script" path="res://Scripts/Nodes/VSEditorViewport.gd" id="5_h7oa2"]
[ext_resource type="Script" path="res://Scripts/VSE_ViewportContainer.gd" id="5_m45ir"]
[ext_resource type="Script" path="res://Scripts/Nodes/VSEditorCamera.gd" id="6_wurw0"]
[ext_resource type="Theme" uid="uid://0wclcn57bq5r" path="res://Styles/SEditor_SectorID.tres" id="7_ohm8i"]
[ext_resource type="Script" path="res://Scripts/UI/Output.gd" id="7_xfrtc"]
[ext_resource type="Script" path="res://Scripts/UI/VSEditor.gd" id="8_s3wc3"]
[ext_resource type="FontFile" uid="uid://dvqk2fjqkpear" path="res://Assets/QuickSilver/Quicksilver.ttf" id="9_cdsto"]
[ext_resource type="Script" path="res://Scripts/UI/SFileDialog.gd" id="9_pga44"]

[sub_resource type="Theme" id="Theme_l44yk"]
Panel/styles/panel = ExtResource("1_cc3py")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q1oas"]
bg_color = Color(0.160784, 0.160784, 0.176471, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yrrn4"]
bg_color = Color(0.6, 0, 0.00392157, 1)

[sub_resource type="Theme" id="Theme_7gp8u"]
RichTextLabel/colors/default_color = Color(0.84, 0.965333, 1, 0.219608)
RichTextLabel/font_sizes/bold_font_size = 48
RichTextLabel/font_sizes/normal_font_size = 48
RichTextLabel/fonts/normal_font = ExtResource("9_cdsto")

[node name="Persistent" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource("Theme_l44yk")
script = ExtResource("1_p5snc")
metadata/_edit_vertical_guides_ = [214.0]

[node name="VB" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="Views" type="Control" parent="VB"]
offset_right = 1600.0
offset_bottom = 865.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("3_ykh8n")
script = ExtResource("4_d3lki")
metadata/_edit_layout_mode = 1

[node name="HB" type="HBoxContainer" parent="VB/Views"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="STreeView" type="Tree" parent="VB/Views/HB"]
visible = false
offset_right = 751.0
offset_bottom = 865.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
columns = 2
script = ExtResource("5_ddx1b")

[node name="STreeViewTxt" type="TextEdit" parent="VB/Views/HB"]
visible = false
offset_right = 696.0
offset_bottom = 900.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35
theme_override_font_sizes/font_size = 12
placeholder_text = "AST Viewer
"
editable = false
metadata/_edit_use_custom_anchors = true

[node name="VSE_Viewport" type="SubViewportContainer" parent="VB/Views/HB"]
offset_right = 1600.0
offset_bottom = 865.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.45
mouse_default_cursor_shape = 2
stretch = true
script = ExtResource("5_m45ir")
metadata/_edit_layout_mode = 1

[node name="SubViewport" type="SubViewport" parent="VB/Views/HB/VSE_Viewport"]
process_mode = 1
disable_3d = true
handle_input_locally = false
size = Vector2i(1600, 865)
render_target_update_mode = 4
script = ExtResource("5_h7oa2")

[node name="VPCam" type="Camera2D" parent="VB/Views/HB/VSE_Viewport/SubViewport" node_paths=PackedStringArray("HB")]
current = true
script = ExtResource("6_wurw0")
HB = NodePath("../../..")

[node name="BG" type="Panel" parent="VB/Views/HB/VSE_Viewport/SubViewport/VPCam"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5000.0
offset_top = -5000.0
offset_right = 5000.0
offset_bottom = 5000.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q1oas")

[node name="VSEditor" type="Control" parent="VB/Views/HB/VSE_Viewport/SubViewport" node_paths=PackedStringArray("IndentSlider", "Mode_Indi", "Follow_Indi")]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("7_ohm8i")
script = ExtResource("8_s3wc3")
IndentSlider = NodePath("../../../../../MenuTabs/VSE_IndentSlider")
Mode_Indi = NodePath("../../../../VSE_ModeIndicator")
Follow_Indi = NodePath("../../../../VSE_FollowIndicator")

[node name="Reticle" type="Panel" parent="VB/Views/HB/VSE_Viewport/SubViewport"]
custom_minimum_size = Vector2(10, 10)
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yrrn4")

[node name="STEditor" type="CodeEdit" parent="VB/Views/HB"]
visible = false
offset_left = 801.0
offset_right = 1600.0
offset_bottom = 865.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.45
placeholder_text = " Sectored Lang - IDE - V0.0.1"
minimap_draw = true
minimap_width = 40
line_folding = true
gutters_draw_line_numbers = true
gutters_draw_fold_gutter = true
indent_automatic = true
indent_automatic_prefixes = ["{", "[", "("]
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("5_beomd")
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="Env" type="TextEdit" parent="VB/Views/HB"]
visible = false
offset_left = 759.0
offset_right = 1600.0
offset_bottom = 865.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
placeholder_text = "Environment Viewer
"
editable = false
metadata/_edit_use_custom_anchors = true

[node name="VSE_ModeIndicator" type="RichTextLabel" parent="VB/Views"]
anchor_left = 0.85
anchor_top = 0.06
anchor_right = 1.0
anchor_bottom = 0.14
grow_horizontal = 0
theme = SubResource("Theme_7gp8u")
text = "NAV"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="VSE_FollowIndicator" type="RichTextLabel" parent="VB/Views"]
anchor_left = 0.85
anchor_top = 0.12
anchor_right = 1.0
anchor_bottom = 0.187
grow_horizontal = 0
theme = SubResource("Theme_7gp8u")
theme_override_font_sizes/normal_font_size = 30
text = "Follow"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="MenuTabs" type="HBoxContainer" parent="VB"]
offset_top = 869.0
offset_right = 1600.0
offset_bottom = 900.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="HSpacer_Left" type="HSplitContainer" parent="VB/MenuTabs"]
offset_right = 59.0
offset_bottom = 31.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="Open File" type="Button" parent="VB/MenuTabs" node_paths=PackedStringArray("AuxNode")]
offset_left = 63.0
offset_right = 144.0
offset_bottom = 31.0
toggle_mode = true
action_mode = 0
text = "Open File"
icon_alignment = 1
script = ExtResource("2_fr1oi")
AuxNode = NodePath("../../../AuxPanels/OpenFileDialog")

[node name="Save File" type="Button" parent="VB/MenuTabs" node_paths=PackedStringArray("AuxNode")]
offset_left = 148.0
offset_right = 223.0
offset_bottom = 31.0
toggle_mode = true
action_mode = 0
text = "Save File"
icon_alignment = 1
script = ExtResource("2_fr1oi")
AuxNode = NodePath("../../../AuxPanels/SaveFileDialog")

[node name="LogTab" type="Button" parent="VB/MenuTabs" node_paths=PackedStringArray("AuxNode")]
offset_left = 227.0
offset_right = 271.0
offset_bottom = 31.0
toggle_mode = true
action_mode = 0
text = "Logs
"
icon_alignment = 1
script = ExtResource("2_fr1oi")
AuxNode = NodePath("../../../AuxPanels/Log")

[node name="OutTab" type="Button" parent="VB/MenuTabs" node_paths=PackedStringArray("AuxNode")]
offset_left = 275.0
offset_right = 339.0
offset_bottom = 31.0
toggle_mode = true
action_mode = 0
text = "Output"
icon_alignment = 1
script = ExtResource("2_fr1oi")
AuxNode = NodePath("../../../AuxPanels/OutPanel")

[node name="VSE_IndentSlider" type="HSlider" parent="VB/MenuTabs"]
custom_minimum_size = Vector2(300, 10)
offset_left = 1236.0
offset_top = 7.0
offset_right = 1536.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 10
size_flags_vertical = 4
value = 20.0
metadata/_edit_layout_mode = 1

[node name="HSpacer_Right" type="HSplitContainer" parent="VB/MenuTabs"]
offset_left = 1540.0
offset_right = 1600.0
offset_bottom = 31.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="AuxPanels" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.02
mouse_filter = 2
theme = ExtResource("4_hwwia")
metadata/_edit_layout_mode = 1

[node name="Log" type="Window" parent="AuxPanels" node_paths=PackedStringArray("TabBtn")]
position = Vector2i(180, 180)
size = Vector2i(300, 100)
visible = false
script = ExtResource("3_ihmcm")
TabBtn = NodePath("../../VB/MenuTabs/LogTab")
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="Panel" type="Panel" parent="AuxPanels/Log"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="AuxPanels/Log/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
follow_focus = true
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="Entries" type="VBoxContainer" parent="AuxPanels/Log/Panel/ScrollContainer"]
offset_right = 1600.0
offset_bottom = 900.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_layout_mode = 1

[node name="OutPanel" type="Window" parent="AuxPanels"]
title = "Output"
position = Vector2i(180, 188)
size = Vector2i(300, 100)
visible = false
wrap_controls = true
script = ExtResource("7_xfrtc")
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="Panel" type="Panel" parent="AuxPanels/OutPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OutView" type="TextEdit" parent="AuxPanels/OutPanel/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
editable = false
metadata/_edit_layout_mode = 1

[node name="OpenFileDialog" type="FileDialog" parent="AuxPanels" node_paths=PackedStringArray("TabBtn")]
transparent_bg = true
title = "Open a File"
position = Vector2i(100, 100)
size = Vector2i(400, 361)
min_size = Vector2i(400, 300)
ok_button_text = "Open"
dialog_close_on_escape = false
file_mode = 0
access = 2
show_hidden_files = true
script = ExtResource("9_pga44")
TabBtn = NodePath("../../VB/MenuTabs/Open File")

[node name="SaveFileDialog" type="FileDialog" parent="AuxPanels" node_paths=PackedStringArray("TabBtn")]
transparent_bg = true
position = Vector2i(100, 100)
size = Vector2i(400, 361)
min_size = Vector2i(400, 300)
ok_button_text = "Save"
dialog_close_on_escape = false
access = 2
show_hidden_files = true
script = ExtResource("9_pga44")
TabBtn = NodePath("../../VB/MenuTabs/Save File")
